--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,6 +6,12 @@
 
 body {
   font-family: 'Righteous', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 100vh;
+  background-color: #c7cdd3;
 }
 
 .card {
@@ -67,4 +73,12 @@ body {
    border: none;
    border-radius: 10px;
    margin-top: 10px;
+}
+
+#gameBoard {
+  max-width: 700px;
+  display: grid;
+  grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr;
+
+  gap: 20px;
 }
